Fixed spacing on front page

--- a/gae/static/css/style.css
+++ b/gae/static/css/style.css
@@ -22,7 +22,7 @@ body {
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
              0px 8px 13px rgba(0,0,0,0.1),
              0px 18px 23px rgba(0,0,0,0.1);
-    padding: 85px 0px 90px 0px;
+    padding: 85px 0px 35px 0px;
     line-height: 58px;
 }
 
